base/policies/require-readonly-rootfs.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-readonly-rootfs
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-readonly-rootfs
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - helloworld
      validate:
        message: "Containers must use a read-only root filesystem."
        pattern:
          spec:
            containers:
              - securityContext:
                  readOnlyRootFilesystem: true
