base/policies/verify-image-signature.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-image-signature
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: verify-helloworld-signature
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - helloworld
      verifyImages:
        - imageReferences:
            - "us-central1-docker.pkg.dev/gke-infrastructure-493002/platform/helloworld:*"
          attestors:
            - entries:
                - keyless:
                    subjectRegExp: "^https://github.com/umar11b/platform-helloworld/.*@refs/heads/main$"
                    issuer: "https://token.actions.githubusercontent.com"
                    rekor:
                      url: https://rekor.sigstore.dev
